# sub_sync

./: README.md  pyproject.toml
.github/workflows/: deploy-docker-images.yml
docker/: Dockerfile
sub_sync/: sub_sync.py
tests/: test_sub_sync.py
