[tool.poetry]
name = "sub_sync"
version = "0.1.2"
description = ""
authors = ["jun.ye <yejun.code@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
ffsubsync = "^0.4.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
toml = "^0.10.2"
black = "^22.10.0"
types-toml = "^0.10.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sub_sync = "sub_sync.sub_sync:main"
